--- a/einkorn_bread.html
+++ b/einkorn_bread.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../css/index.css" type="text/css" rel="stylesheet">
     <title>Einkorn Bread Recipe</title>
 </head>
 <body>
+    <nav class="myNav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="einkorn_pancakes.html">Einkorn Pancakes</a></li>
+            <li><a href="einkorn_bread.html">Einkorn Wheat Bread</a></li>
+        </ul>
+    </nav>
+    <h1>
+        Einkorn Bread Recipe
+    </h1>
+    <img src='img/bread.jpeg' alth='loaf of einkorn bread'>
+    <h2>INGREDIENTS</h2>
+    <ul class="ingredients">
+        <li>1 &#188; cups warm water</li>
+        <li>1 &#189; teaspoon dry active yeast</li>
+        <li>2 tablespoons oil or butter, melted and cooled</li>
+        <li>1 tablespoon sugar or honey</li>
+        <li>3 &#190; cups Einkorn flour</li>
+        <li>1 &#188; teaspoons sea salt</li>
+    </ul>
+    <h2>INSTRUCTIONS</h2>
+    <ol class="ingredients">
+        <li>In large bowl, combine water, yeast, oil or butter, sugar or honey. Stir until creamy.</li>
+        <li>Measure the flour with baking scale or spoon into a measuring cup, then add it on top of yeast
+            mixture. Sprinkle the salt on top</li>
+        <li>Mix with spatual or a kneading tool until the flour is absorbed and you have a wet, sticky dough.</li>
+        <li>Cover tightly with plastic wrap. Let rise for 45 minutes.</li>
+        <li>Preheat the oven to 350&#xb0;F. Butter an 8½ x 4½-inch loaf pan. </li>
+        <li>Transfer the dough to a lightly floured work surface. The dough will feel very sticky and wet, 
+            but try not to add more additional flour than what you have dusted the work surface with or you 
+            may find dry flour baked in the bread. Shape the dough into a loaf. A bowl scraper is a great 
+            tool to help with shaping the sticky dough.</li>
+        <li>Place in the loaf pan, cover with oiled or buttered plastic wrap to inhibit the plastic from 
+            sticking the dough. Let rise for 30 minutes. Remove the plastic wrap.</li>
+        <li>Bake for 40 minutes. Let cool completely before slicing.</li>
+
+    </ol> 
     
 </body>
 </html>
