--- a/einkorn_pancakes.html
+++ b/einkorn_pancakes.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../css/index.css" type="text/css" rel="stylesheet">
     <title>Einkorn Pancakes Recipe</title>
 </head>
 <body>
-    
+    <nav class="myNav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="einkorn_pancakes.html">Einkorn Pancakes</a></li>
+            <li><a href="einkorn_bread.html">Einkorn Wheat Bread</a></li>
+        </ul>
+    </nav>
+
+    <h1>
+        Einkorn Pancakes
+    </h1>
+    <img src='img/pancakes.jpeg' alt='three einkorn pancakes on a spatula'>
+   
+    <h2>INGREDIENTS</h2>
+    <ul class="ingredients">
+        <li>1 &#188; cups whole milk</li>
+        <li>1TB lemon juice</li>
+        <li>2 cups of einkorn flour</li>
+        <li>1sp cinnamon</li>
+        <li>1TB baking powder</li>
+        <li>1 &#188; Tsp salt</li>
+        <li>2 eggs</li>
+        <li>3TB unsalted butter</li>
+        <li>1TB maple syrup or honey</li>
+        <li>1tsp pure vanilla extract</li>
+    </ul>
+    <h2>INSTRUCTIONS</h2>
+    <ol class="ingredients">
+        <li>Combine the milk and lemon juice in a small bowl. Let the mixture rest for 5 minutes. I love 
+            adding lemon juice to my pancakes. I find this helps to soften the batter. If you don't have 
+            lemon juice, you can skip this step and still make good pancakes. </li>
+        <li>Meanwhile, in a large bowl, whisk the flour, cinnamon, baking powder, and salt. </li>
+        <li>Add the milk to the flour mixture, along with the eggs, melted butter, maple syrup or honey, 
+            and vanilla extract. Allow the batter to rest for 5-10 minutes to thicken. Whisk or stir again 
+            before use. If you feel the batter is too thick (particularly when using whole wheat einkorn), 
+            add more milk until you reach the desired consistency. </li>
+        <li>Meanwhile, heat a griddle (or large skillet) over medium heat. <--You may need to lower the heat 
+            while cooking the pancakes if your griddle gets too hot and begins to burn the pancakes, cooking 
+            them too fast. Use your best judgement with this. This will vary depending on your stove-top and griddle. </li>
+        <li>Add extra butter to the griddle to keep the pancake batter from sticking, then ladle the pancake batter 
+            in small batches on the griddle (I use a small soup ladle to do this, or a measuring cup). 
+            Cook each pancake for 2-3 minutes on each side, or until golden brown. </li>
+        <li>Serve warm with with butter and maple syrup (the pancakes aren't very sweet on their own). Or, serve 
+            with fruit, nut butter, or topping of choice. If making the pancakes in advance, allow the pancakes to 
+            fully cool before storing in a bag or container in the fridge or freezer. </li>
+
+
+    </ol> 
 </body>
 </html>
