--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link href="../css/index.css" type="text/css" rel="stylesheet">
     <title>My Recipes</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="myNav">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="einkorn_pancakes.html">Einkorn Pancakes</a></li>
             <li><a href="einkorn_bread.html">Einkorn Wheat Bread</a></li>
         </ul>
     </nav>
+    <h1>My Receipes</h1>
+    <img src="img/main.jpeg" alt="dough with dough roller">
     
 </body>
 </html>
