--- a/einkorn_pancakes.html
+++ b/einkorn_pancakes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/index.css" type="text/css" rel="stylesheet">
+    <link href="/odin-recipes/css/index.css" type="text/css" rel="stylesheet">
     <title>Einkorn Pancakes Recipe</title>
 </head>
 <body>
